--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <!-- <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,400;0,700;1,300&display=swap" -->
-  rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,400;0,700;1,300&display=swap"
+    rel="stylesheet">
   <link rel="stylesheet" href="css/reset.css">
   <link rel="stylesheet" href="css/slick.css">
   <link rel="stylesheet" href="css/jquery.fancybox.css">
@@ -23,19 +23,19 @@
           <a class="menu__list-link" href="#">1 cезон</a>
         </li>
         <li class="menu__list-item">
-          <a class="menu__list-link" href="#">1 cезон</a>
+          <a class="menu__list-link" href="#">2 cезон</a>
         </li>
         <li class="menu__list-item">
-          <a class="menu__list-link" href="#">1 cезон</a>
+          <a class="menu__list-link" href="#">3 cезон</a>
         </li>
         <li class="menu__list-item">
-          <a class="menu__list-link" href="#">1 cезон</a>
+          <a class="menu__list-link" href="#">4 cезон</a>
         </li>
         <li class="menu__list-item">
-          <a class="menu__list-link" href="#">1 cезон</a>
+          <a class="menu__list-link" href="#">5 cезон</a>
         </li>
         <li class="menu__list-item">
-          <a class="menu__list-link" href="#">1 cезон</a>
+          <a class="menu__list-link" href="#">6 cезон</a>
         </li>
       </ul>
     </nav>
