--- a/index.html
+++ b/index.html
@@ -99,9 +99,42 @@
         </span>
         Is Coming...
       </h3>
-      <a class="video__btn" href="#">Посмотреть трейлер сериала</a>
+      <a class="video__btn" data-fancybox href="https://youtu.be/9BiaYev_VvM">Посмотреть трейлер сериала</a>
     </div>
   </section>
+
+  <section class="seasons section-page">
+    <div class="container">
+      <h3 class="title">Все сезоны</h3>
+      <ol class="seasons__inner">
+        <li class="seasons__item" style="background-image: url(images/seasons-image-1.jpg);
+">
+          <a class="seasons__link" href="#">Cмотреть</a>
+        </li>
+        <li class="seasons__item" style="background-image: url(images/seasons-image-2.jpg);
+">
+          <a class="seasons__link" href="#">Cмотреть</a>
+        </li>
+        <li class="seasons__item" style="background-image: url(images/seasons-image-3.jpg);
+">
+          <a class="seasons__link" href="#">Cмотреть</a>
+        </li>
+        <li class="seasons__item" style="background-image: url(images/seasons-image-4.jpg);
+">
+          <a class="seasons__link" href="#">Cмотреть</a>
+        </li>
+        <li class="seasons__item" style="background-image: url(images/seasons-image-5.jpg);
+">
+          <a class="seasons__link" href="#">Cмотреть</a>
+        </li>
+        <li class="seasons__item" style="background-image: url(images/seasons-image-6.jpg);
+">
+          <a class="seasons__link" href="#">Cмотреть</a>
+        </li>
+      </ol>
+    </div>
+  </section>
+
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
