--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -18,6 +18,9 @@
 
   <header class="header">
     <nav class="menu">
+      <button class="menu__btn">
+        <span></span>
+      </button>
       <ul class="menu__list">
         <li class="menu__list-item">
           <a class="menu__list-link" href="#">1 cезон</a>
@@ -53,28 +56,29 @@
         <ul class="about__info">
           <li class="about__info-item">
             Жанр
-            <span>
-              Историческая драма
-            </span>
+            <span>Историческая драма</span>
           </li>
-          <li class="about__info-item">Сезонов
+          <li class="about__info-item">
+            Сезонов
             <span>6</span>
           </li>
-          <li class="about__info-item">Длительность серии
+          <li class="about__info-item">
+            Длительность серии
             <span>45 минут</span>
           </li>
-          <li class="about__info-item">На экранах
+          <li class="about__info-item">
+            На экранах
             <span>С 3 марта 2013 по сей день</span>
           </li>
         </ul>
         <div class="about__text">
-          <p>Викинги – шикарный исторический сериал, один из лучших в своем жанре, шоу может похвастаться огромной
+          <p>
+            Викинги – шикарный исторический сериал, один из лучших в своем жанре, шоу может похвастаться огромной
             фан-базой, а также
             тем, что пробудил интерес к истории и возродил моду на викингов.
-            .</p>
+          </p>
           <p>
-            «Викинги» созданы по заказу канала американского канала History, однако работали над ним канадцы и
-            ирландцы.
+            «Викинги» созданы по заказу канала американского канала History, однако работали над ним канадцы и ирландцы.
             Сериал
             поражает масштабными сценами сражений, добротным и глубоким сценарием, а также максимальным вниманием к
             исторической
@@ -107,31 +111,72 @@
     <div class="container">
       <h3 class="title">Все сезоны</h3>
       <ol class="seasons__inner">
-        <li class="seasons__item" style="background-image: url(images/seasons-image-1.jpg);
-">
+        <li class="seasons__item" style="background-image: url('images/seasons-image-1.jpg');">
           <a class="seasons__link" href="#">Cмотреть</a>
         </li>
-        <li class="seasons__item" style="background-image: url(images/seasons-image-2.jpg);
-">
+        <li class="seasons__item" style="background-image: url('images/seasons-image-2.jpg');">
           <a class="seasons__link" href="#">Cмотреть</a>
         </li>
-        <li class="seasons__item" style="background-image: url(images/seasons-image-3.jpg);
-">
+        <li class="seasons__item" style="background-image: url('images/seasons-image-3.jpg');">
           <a class="seasons__link" href="#">Cмотреть</a>
         </li>
-        <li class="seasons__item" style="background-image: url(images/seasons-image-4.jpg);
-">
+        <li class="seasons__item" style="background-image: url('images/seasons-image-4.jpg');">
           <a class="seasons__link" href="#">Cмотреть</a>
         </li>
-        <li class="seasons__item" style="background-image: url(images/seasons-image-5.jpg);
-">
+        <li class="seasons__item" style="background-image: url('images/seasons-image-5.jpg');">
           <a class="seasons__link" href="#">Cмотреть</a>
         </li>
-        <li class="seasons__item" style="background-image: url(images/seasons-image-6.jpg);
-">
+        <li class="seasons__item" style="background-image: url('images/seasons-image-6.jpg');">
           <a class="seasons__link" href="#">Cмотреть</a>
         </li>
       </ol>
+    </div>
+  </section>
+
+  <section class="heroes section-page">
+    <div class="container">
+      <h3 class="title">Главные герои</h3>
+      <div class="heroes__inner">
+        <div class="heroes__slider-img">
+          <img class="heroes__images" src="images/hero-1.jpg" alt="">
+          <img class="heroes__images" src="images/hero-1.jpg" alt="">
+          <img class="heroes__images" src="images/hero-1.jpg" alt="">
+        </div>
+        <div class="heroes__slider-text">
+          <div class="heroes__text">
+            <h4 class="heroes__name">Рагнар</h4>
+            <p>Рагна́р Лодбро́к (др.-сканд. Ragnarr Loðbrók) - полулегендарный скандинавский конунг из рода Инглингов,
+              ключевой
+              персонаж сериала.
+            </p>
+            <p>Умелый воин и амбициозный вождь, Рагнар на протяжении почти всей своей жизни следует пути викинга.
+              Рассекая море в
+              поисках боевой славы и наживы, он стремится обрести новые знания, открыть неизвестные земли и изменить
+              нелегкую судьбу
+              своего народа, живущего в суровых условиях Скандинавского полуострова</p>
+            <h4 class="heroes__name">Рагнар2</h4>
+            <p>Рагна́р Лодбро́к (др.-сканд. Ragnarr Loðbrók) - полулегендарный скандинавский конунг из рода Инглингов,
+              ключевой
+              персонаж сериала.
+            </p>
+            <p>Умелый воин и амбициозный вождь, Рагнар на протяжении почти всей своей жизни следует пути викинга.
+              Рассекая море в
+              поисках боевой славы и наживы, он стремится обрести новые знания, открыть неизвестные земли и изменить
+              нелегкую судьбу
+              своего народа, живущего в суровых условиях Скандинавского полуострова</p>
+            <h4 class="heroes__name">Рагнар3</h4>
+            <p>Рагна́р Лодбро́к (др.-сканд. Ragnarr Loðbrók) - полулегендарный скандинавский конунг из рода Инглингов,
+              ключевой
+              персонаж сериала.
+            </p>
+            <p>Умелый воин и амбициозный вождь, Рагнар на протяжении почти всей своей жизни следует пути викинга.
+              Рассекая море в
+              поисках боевой славы и наживы, он стремится обрести новые знания, открыть неизвестные земли и изменить
+              нелегкую судьбу
+              своего народа, живущего в суровых условиях Скандинавского полуострова</p>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
