--- a/index.html
+++ b/index.html
@@ -145,17 +145,23 @@
         <div class="heroes__slider-text">
           <div class="heroes__text">
             <h4 class="heroes__name">Рагнар</h4>
-            <p>Рагна́р Лодбро́к (др.-сканд. Ragnarr Loðbrók) - полулегендарный скандинавский конунг из рода Инглингов,
+            <p>
+              Рагна́р Лодбро́к (др.-сканд. Ragnarr Loðbrók) - полулегендарный скандинавский конунг из рода Инглингов,
               ключевой
               персонаж сериала.
             </p>
-            <p>Умелый воин и амбициозный вождь, Рагнар на протяжении почти всей своей жизни следует пути викинга.
+            <p>
+              Умелый воин и амбициозный вождь, Рагнар на протяжении почти всей своей жизни следует пути викинга.
               Рассекая море в
               поисках боевой славы и наживы, он стремится обрести новые знания, открыть неизвестные земли и изменить
               нелегкую судьбу
-              своего народа, живущего в суровых условиях Скандинавского полуострова</p>
+              своего народа, живущего в суровых условиях Скандинавского полуострова
+            </p>
+          </div>
+          <div class="heroes__text">
             <h4 class="heroes__name">Рагнар2</h4>
-            <p>Рагна́р Лодбро́к (др.-сканд. Ragnarr Loðbrók) - полулегендарный скандинавский конунг из рода Инглингов,
+            <p>
+              Рагна́р Лодбро́к (др.-сканд. Ragnarr Loðbrók) - полулегендарный скандинавский конунг из рода Инглингов,
               ключевой
               персонаж сериала.
             </p>
@@ -163,23 +169,34 @@
               Рассекая море в
               поисках боевой славы и наживы, он стремится обрести новые знания, открыть неизвестные земли и изменить
               нелегкую судьбу
-              своего народа, живущего в суровых условиях Скандинавского полуострова</p>
+              своего народа, живущего в суровых условиях Скандинавского полуострова
+            </p>
+          </div>
+          <div class="heroes__text">
             <h4 class="heroes__name">Рагнар3</h4>
-            <p>Рагна́р Лодбро́к (др.-сканд. Ragnarr Loðbrók) - полулегендарный скандинавский конунг из рода Инглингов,
+            <p>
+              Рагна́р Лодбро́к (др.-сканд. Ragnarr Loðbrók) - полулегендарный скандинавский конунг из рода Инглингов,
               ключевой
               персонаж сериала.
             </p>
-            <p>Умелый воин и амбициозный вождь, Рагнар на протяжении почти всей своей жизни следует пути викинга.
+            <p>
+              Умелый воин и амбициозный вождь, Рагнар на протяжении почти всей своей жизни следует пути викинга.
               Рассекая море в
               поисках боевой славы и наживы, он стремится обрести новые знания, открыть неизвестные земли и изменить
               нелегкую судьбу
-              своего народа, живущего в суровых условиях Скандинавского полуострова</p>
+              своего народа, живущего в суровых условиях Скандинавского полуострова
+            </p>
           </div>
         </div>
       </div>
     </div>
   </section>
 
+  <foter class="footer">
+    <div class="container">
+      <p class="copy">Сериал «Викинги». Правами на сериал владеет канал History.</p>
+    </div>
+  </foter>
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
