--- a/season-1.html
+++ b/season-1.html
@@ -15,7 +15,72 @@
 
 <body>
 
+  <header class="page-header">
+    <nav class="menu">
+      <button class="menu__btn">
+        <span></span>
+      </button>
+      <ul class="menu__list">
+        <li class="menu__list-item">
+          <a class="menu__list-link menu__list-link--active" href="#">1 cезон</a>
+        </li>
+        <li class="menu__list-item">
+          <a class="menu__list-link" href="#">2 cезон</a>
+        </li>
+        <li class="menu__list-item">
+          <a class="menu__list-link" href="#">3 cезон</a>
+        </li>
+        <li class="menu__list-item">
+          <a class="menu__list-link" href="#">4 cезон</a>
+        </li>
+        <li class="menu__list-item">
+          <a class="menu__list-link" href="#">5 cезон</a>
+        </li>
+        <li class="menu__list-item">
+          <a class="menu__list-link" href="#">6 cезон</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="season-info">
+      <div class="season-info__num">
+        01
+        <span>сезон</span>
+      </div>
+      <div class="season-info__text">
+        <p>
+          Сериал знакомит нас с жестоким и таинственным миром Рагнара Лодброка, воина-викинга и фермера, который жаждет
+          исследовать—и совершать набеги-далекие берега океана. Его честолюбие ставит его в противоречие с местным
+          вождем графом
+          Харальдсоном, который настаивает на отправке своих рейдеров на бедный Восток, а не на неизведанный Запад.
+          Когда Рагнар
+          объединяется со своим другом-кораблестроителем Флоки, чтобы создать новое поколение бесстрашных кораблей,
+          способных
+          покорять бурные северные моря, сцена готова к конфликту.
+        </p>
+        <p>
+          Сериал знакомит нас с жестоким и таинственным миром Рагнара Лодброка, воина-викинга и фермера, который жаждет
+          исследовать—и совершать набеги-далекие берега океана. Его честолюбие ставит его в противоречие с местным
+          вождем графом
+          Харальдсоном, который настаивает на отправке своих рейдеров на бедный Восток, а не на неизведанный Запад.
+          Когда Рагнар
+          объединяется со своим другом-кораблестроителем Флоки, чтобы создать новое поколение бесстрашных кораблей,
+          способных
+          покорять бурные северные моря, сцена готова к конфликту.
 
+          Но несмотря на всю свою войну и кровопролитие, викинги также являются историей семьи и братства, захватывая
+          любовь и
+          привязанность между Рагнаром и его женой Лагертой, свирепой воительницей. Это история о брате Рагнара Ролло,
+          яростном
+          борце, который кипит от ревности; о жене графа Харальдсона Зигги, послушной красавице, которая, возможно, не
+          слишком
+          верна; и о монахе Ательстане, чья христианская мораль противоречит языческому обществу викингов. Когда амбиции
+          и
+          инновации потрясут цивилизацию, эти персонажи будут подвергнуты испытанию—и их образ жизни никогда не будет
+          прежним.
+        </p>
+      </div>
+    </div>
+  </header>
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
