--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 
   <header class="header">
     <nav class="menu">
-      <button class="menu__btn">
+      <!-- <button class="menu__btn">
         <span></span>
-      </button>
+      </button> -->
       <ul class="menu__list">
         <li class="menu__list-item">
-          <a class="menu__list-link" href="#">1 cезон</a>
+          <a class="menu__list-link" href="season-1.html">1 cезон</a>
         </li>
         <li class="menu__list-item">
           <a class="menu__list-link" href="#">2 cезон</a>
@@ -103,7 +103,7 @@
         </span>
         Is Coming...
       </h3>
-      <a class="video__btn" data-fancybox href="https://youtu.be/9BiaYev_VvM">Посмотреть трейлер сериала</a>
+      <a class="video__btn" data-fancybox href="https://youtu.be/9BiaYev_VvM?autoplay=0">Посмотреть трейлер сериала</a>
     </div>
   </section>
 
@@ -112,7 +112,7 @@
       <h3 class="title">Все сезоны</h3>
       <ol class="seasons__inner">
         <li class="seasons__item" style="background-image: url('images/seasons-image-1.jpg');">
-          <a class="seasons__link" href="#">Cмотреть</a>
+          <a class="seasons__link" href="season-1.html">Cмотреть</a>
         </li>
         <li class="seasons__item" style="background-image: url('images/seasons-image-2.jpg');">
           <a class="seasons__link" href="#">Cмотреть</a>
