--- a/season-1.html
+++ b/season-1.html
@@ -17,29 +17,34 @@
 
   <header class="page-header">
     <nav class="menu">
-      <button class="menu__btn">
+      <div class="menu__container">
+        <a class="page-logo" href="index.html">
+          <img src="images/page-logo.png" alt="">
+        </a>
+        <!-- <button class="menu__btn">
         <span></span>
-      </button>
-      <ul class="menu__list">
-        <li class="menu__list-item">
-          <a class="menu__list-link menu__list-link--active" href="#">1 cезон</a>
-        </li>
-        <li class="menu__list-item">
-          <a class="menu__list-link" href="#">2 cезон</a>
-        </li>
-        <li class="menu__list-item">
-          <a class="menu__list-link" href="#">3 cезон</a>
-        </li>
-        <li class="menu__list-item">
-          <a class="menu__list-link" href="#">4 cезон</a>
-        </li>
-        <li class="menu__list-item">
-          <a class="menu__list-link" href="#">5 cезон</a>
-        </li>
-        <li class="menu__list-item">
-          <a class="menu__list-link" href="#">6 cезон</a>
-        </li>
-      </ul>
+      </button> -->
+        <ul class="menu__list">
+          <li class="menu__list-item">
+            <a class="menu__list-link menu__list-link--active" href="#">1 cезон</a>
+          </li>
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="#">2 cезон</a>
+          </li>
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="#">3 cезон</a>
+          </li>
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="#">4 cезон</a>
+          </li>
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="#">5 cезон</a>
+          </li>
+          <li class="menu__list-item">
+            <a class="menu__list-link" href="#">6 cезон</a>
+          </li>
+        </ul>
+      </div>
     </nav>
     <div class="season-info">
       <div class="season-info__num">
@@ -81,6 +86,41 @@
       </div>
     </div>
   </header>
+
+  <section class="seasons section-page">
+    <div class="container">
+      <h3 class="title">Все серии 1 сезона</h3>
+      <ol class="seasons__inner">
+        <li class="seasons__item" style="background-image: url('images/seasons-image-1.jpg');">
+          <a class="seasons__link" data-fancybox="gallery" href="https://youtu.be/9BiaYev_VvM?autoplay=0">Cмотреть</a>
+        </li>
+        <li class="seasons__item" style="background-image: url('images/seasons-image-2.jpg');">
+          <a class="seasons__link" data-fancybox="gallery" href="https://youtu.be/9BiaYev_VvM?autoplay=0">Cмотреть</a>
+        </li>
+        <li class="seasons__item" style="background-image: url('images/seasons-image-3.jpg');">
+          <a class="seasons__link" data-fancybox="gallery" href="https://youtu.be/9BiaYev_VvM?autoplay=0">Cмотреть</a>
+        </li>
+        <li class="seasons__item" style="background-image: url('images/seasons-image-4.jpg');">
+          <a class="seasons__link" data-fancybox="gallery" href="https://youtu.be/9BiaYev_VvM?autoplay=0">Cмотреть</a>
+        </li>
+        <li class="seasons__item" style="background-image: url('images/seasons-image-5.jpg');">
+          <a class="seasons__link" data-fancybox="gallery" href="https://youtu.be/9BiaYev_VvM?autoplay=0">Cмотреть</a>
+        </li>
+        <li class="seasons__item" style="background-image: url('images/seasons-image-6.jpg');">
+          <a class="seasons__link" data-fancybox="gallery" href="https://youtu.be/9BiaYev_VvM?autoplay=0">Cмотреть</a>
+        </li>
+        <li class="seasons__item" style="background-image: url('images/seasons-image-1.jpg');">
+          <a class="seasons__link" data-fancybox="gallery" href="https://youtu.be/9BiaYev_VvM?autoplay=0">Cмотреть</a>
+        </li>
+        <li class="seasons__item" style="background-image: url('images/seasons-image-2.jpg');">
+          <a class="seasons__link" data-fancybox="gallery" href="https://youtu.be/9BiaYev_VvM?autoplay=0">Cмотреть</a>
+        </li>
+        <li class="seasons__item" style="background-image: url('images/seasons-image-3.jpg');">
+          <a class="seasons__link" data-fancybox="gallery" href="https://youtu.be/9BiaYev_VvM?autoplay=0">Cмотреть</a>
+        </li>
+      </ol>
+    </div>
+  </section>
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
