--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
   </header>
 
-  <!-- <section class="about section-page">
+  <section class="about section-page">
     <div class="container">
       <h3 class="title">
         О сериале
@@ -196,7 +196,7 @@
     <div class="container">
       <p class="copy">Сериал «Викинги». Правами на сериал владеет канал History.</p>
     </div>
-  </foter> -->
+  </foter>
 
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
