--- a/season-1.html
+++ b/season-1.html
@@ -17,6 +17,9 @@
 
   <header class="page-header">
     <nav class="menu">
+      <button class="menu__btn">
+        <span></span>
+      </button>
       <div class="menu__container">
         <a class="page-logo" href="index.html">
           <img src="images/page-logo.png" alt="">
