--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
   <header class="header">
     <nav class="menu">
-      <!-- <button class="menu__btn">
+      <button class="menu__btn">
         <span></span>
-      </button> -->
+      </button>
       <ul class="menu__list">
         <li class="menu__list-item">
           <a class="menu__list-link" href="season-1.html">1 cезон</a>
